add icon status and menu bar. Add header in HTML. Style following the template

--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <h1 class="title">Portfolio</h1>
+    <header class="top">
+        <div class="status">
+            <div>9:41</div>
+            <img src="images/Status Bars/Group 4.png">
+        </div>
+        <div class="menu">
+            <div>John Doe</div>
+            <img src="images/Tertiary/Icons/Union.png">
+        </div>
+    </header>
 </body>
 </html>
