update HTML file. add viewport meta, remove space in the image folder and add the alt attribute

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -11,11 +11,11 @@
     <header class="top">
         <div class="status">
             <div>9:41</div>
-            <img src="images/Status Bars/Group 4.png">
+            <img src="images/Status_Bars/Group 4.png" alt="status icons taken from the figma template">
         </div>
         <div class="menu">
             <div>John Doe</div>
-            <img src="images/Tertiary/Icons/Union.png">
+            <img src="images/Tertiary/Icons/Union.png" alt="menu bar. Icon taken from the figma template">
         </div>
     </header>
 </body>
