remove a space in line 17. HTML code updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="top">
         <div class="status">
             <div>9:41</div>
-            <img src="images/Status_Bars/Group 4.png" alt="status icons taken from the figma template">
+            <img src="images/Status_Bars/Group4.png" alt="status icons taken from the figma template">
         </div>
         <div class="menu">
             <div>John Doe</div>
