--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
             <img src="images/Tertiary/Icons/Union.png" alt="menu bar. Icon taken from the figma template">
         </div>
     </header>
+    <div class="headline">
+        <div class="title">Hey There. I'm Alex</div>
+        <div class="profession">I’am a Software Developer</div>
+        <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don’t hestiate to contact me.</p>
+        <img src="images/Social_Media.png" alt="social media icos taken from the figma template">
+    </div>
+
 </body>
 </html>
