Update HTML with the reviewer recomendation. Add ul for the social media icons, replace divs for h1 and h2 inside the header and add a nav tag

--- a/index.html
+++ b/index.html
@@ -14,22 +14,30 @@
 </head>
 <body>
     <div class="container">
-        <header class="top">
-            <div class="status">
-                <div>9:41</div>
-                <img src="images/Status_Bars/Group4.png" alt="status icons taken from the figma template">
-            </div>
-            <div class="menu">
-                <div>John Doe</div>
-                <img src="images/Tertiary/Icons/Union.png" alt="menu bar. Icon taken from the figma template">
-            </div>
+        <header>
+            <nav class="top">
+                <div class="status">
+                    <div>9:41</div>
+                    <img src="images/Status_Bars/Group4.png" alt="status icons taken from the figma template">
+                </div>
+                <div class="menu">
+                    <div>John Doe</div>
+                    <img src="images/bar.svg" alt="menu bar Icon taken from the figma template">
+                </div>
+            </nav>
         </header>
         <div class="headline">
-            <div class="title">Hey There. I'm Oscar</div>
-            <div class="profession">I’am a Software Developer</div>
+            <h1 class="title">Hey There. I'm Oscar</h1>
+            <h2 class="profession">I’am a Software Developer</h2>
             <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don’t hestiate to contact me.</p>
-            <img src="images/Social_Media.png" alt="social media icos taken from the figma template">
+            <ul class="media">
+                <li><a href="#"><img src="images/github.svg" alt="github icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/in.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/ok.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/twitter.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/m.svg" alt="icon taken from figma"></a></li>
+            </ul>
         </div>
         <img class="image" src="images/Group.png" alt="backgroung image taken from the figma template">
     </div>
