remove status section. No need that one in the project. Code reviewer recomendation

--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
     <div class="container">
         <header>
             <nav class="top">
-                <div class="status">
-                    <div>9:41</div>
-                    <img src="images/Status_Bars/Group4.png" alt="status icons taken from the figma template">
-                </div>
-                <div class="menu">
-                    <div>John Doe</div>
-                    <img src="images/bar.svg" alt="menu bar Icon taken from the figma template">
-                </div>
+                <div>Oscar</div>
+                <img src="images/bar.svg" alt="menu bar Icon taken from the figma template">
             </nav>
         </header>
         <div class="headline">
