Add the work and about section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Noto+Sans+JP:wght@500&family=Roboto+Condensed&family=Roboto:wght@100&family=Sedgwick+Ave&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Crete+Round&family=Noto+Sans+JP:wght@500&family=Roboto+Condensed&family=Roboto:wght@100&family=Sedgwick+Ave&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Crete+Round&family=Noto+Sans+JP:wght@500&family=Poppins:wght@100&family=Roboto+Condensed&family=Roboto:wght@100;300&family=Sedgwick+Ave&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Crete+Round&family=Inter:wght@100;300&family=Noto+Sans+JP:wght@500&family=Poppins:wght@100&family=Roboto+Condensed&family=Roboto:wght@100;300&family=Sedgwick+Ave&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -35,5 +36,124 @@
         </div>
         <img class="image" src="images/Group.png" alt="backgroung image taken from the figma template">
     </div>
+    <article>
+        <section class="work">
+            <div class="first_card">
+                <h2>My Recent Works</h2>
+                <img src="images/gym.png" alt="Gym image taken from figma">
+                <h3>Multi-Post Stories</h3>
+                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer   took a standard dummy text.</p>
+                <ul class="languages">
+                    <li><a href="#">CSS</a>
+                    <li><a href="#">html</a>
+                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Ruby</a>
+                </ul>
+                <a class="access_button" href="#">See Project</a>
+            </div>
+            <div class="second_card">
+                <h3>Profesional Art Printing Data</h3>
+                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="languages">
+                    <li><a href="#">html</a>
+                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Ruby</a>
+                </ul>
+                <a class="access_button" href="#">See Project</a>
+            </div>
+            <div class="second_card">
+                <h3>Profesional Art Printing Data</h3>
+                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="languages">
+                    <li><a href="#">html</a>
+                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Ruby</a>
+                </ul>
+                <a class="access_button" href="#">See Project</a>
+            </div>
+            <div class="second_card">
+                <h3>Profesional Art Printing Data</h3>
+                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="languages">
+                    <li><a href="#">html</a>
+                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Ruby</a>
+                </ul>
+                <a class="access_button" href="#">See Project</a>
+            </div>
+            <div class="second_card">
+                <h3>Profesional Art Printing Data</h3>
+                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="languages">
+                    <li><a href="#">html</a>
+                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Ruby</a>
+                </ul>
+                <a class="access_button" href="#">See Project</a>
+            </div>
+            <div class="second_card">
+                <h3>Profesional Art Printing Data</h3>
+                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="languages">
+                    <li><a href="#">html</a>
+                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Ruby</a>
+                </ul>
+                <a class="access_button" href="#">See Project</a>
+            </div>
+            <div class="second_card">
+                <h3>Profesional Art Printing Data</h3>
+                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="languages">
+                    <li><a href="#">html</a>
+                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Ruby</a>
+                </ul>
+                <a class="access_button" href="#">See Project</a>
+            </div>
+        </section>
+        <section class="containerTwo">
+            <div class="about">
+                <h2 class="title">About me</h2>
+                <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need    coded, don’t hestiate to contact me.</p>
+                <a class="access_button" href="#">Get My Resume</a>
+                <ul class="details">
+                    <li><ul class="abilities">
+                        <div class="abilities_title">
+                            <img src="images/rectangle.svg" alt="Icon taken from figma">
+                            <h3>Language</h3>
+                        </div>
+                        <li>Javascript</li>
+                        <li>Ruby</li>
+                        <li>Html</li>
+                        <li>Css</li>
+                    </ul></li>
+                    <li><ul class="abilities">
+                        <div class="abilities_title">
+                            <img src="images/square.svg" alt="Icon taken from figma">
+                            <h3>Frameworks</h3>
+                        </div>
+                        <li>Bootstrap</li>
+                        <li>Ruby on Rails</li>
+                        <li>RSPec</li>
+                        <li>CapyBara</li>
+                        <li>Selenium</li>
+                    </ul></li>
+                    <li><ul class="abilities">
+                        <div class="abilities_title">
+                            <img src="images/circle.svg" alt="Icon taken from figma">
+                            <h3>Skills</h3>
+                        </div>
+                        <li>Codekit</li>
+                        <li>Github</li>
+                        <li>Codepen</li>
+                        <li>Gitlab</li>
+                        <li>Terminal</li>
+                    </ul></li>
+                </ul>
+            </div>
+            <img class="image_background" src="images/imgback.png" alt="Image background taken from figma">
+        </section>    
+    </article>
 </body>
 </html>
