--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <img class="image" src="images/Group.png" alt="backgroung image taken from the figma template">
     </div>
-    <article>
+    <div>
         <section class="work">
             <div class="first_card">
                 <h2>My Recent Works</h2>
@@ -119,20 +119,20 @@
                 <a class="access_button" href="#">Get My Resume</a>
                 <ul class="details">
                     <li><ul class="abilities">
-                        <div class="abilities_title">
+                        <li class="abilities_title">
                             <img src="images/rectangle.svg" alt="Icon taken from figma">
                             <h3>Language</h3>
-                        </div>
+                        </li>
                         <li>Javascript</li>
                         <li>Ruby</li>
                         <li>Html</li>
                         <li>Css</li>
                     </ul></li>
                     <li><ul class="abilities">
-                        <div class="abilities_title">
+                        <li class="abilities_title">
                             <img src="images/square.svg" alt="Icon taken from figma">
                             <h3>Frameworks</h3>
-                        </div>
+                        </li>
                         <li>Bootstrap</li>
                         <li>Ruby on Rails</li>
                         <li>RSPec</li>
@@ -140,10 +140,10 @@
                         <li>Selenium</li>
                     </ul></li>
                     <li><ul class="abilities">
-                        <div class="abilities_title">
+                        <li class="abilities_title">
                             <img src="images/circle.svg" alt="Icon taken from figma">
                             <h3>Skills</h3>
-                        </div>
+                        </li>
                         <li>Codekit</li>
                         <li>Github</li>
                         <li>Codepen</li>
@@ -154,6 +154,6 @@
             </div>
             <img class="image_background" src="images/imgback.png" alt="Image background taken from figma">
         </section>    
-    </article>
+    </div>
 </body>
 </html>
