Use image background in CSS instade of HTML since those images were just for decoration

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <li><a href="#"><img src="images/m.svg" alt="icon taken from figma"></a></li>
             </ul>
         </div>
-        <img class="image" src="images/Group.png" alt="backgroung image taken from the figma template">
     </div>
     <div>
         <section class="work">
@@ -112,14 +111,13 @@
                 <a class="access_button" href="#">See Project</a>
             </div>
         </section>
-        <section class="containerTwo">
-            <div class="about">
+        <section class="about">
                 <h2 class="title">About me</h2>
                 <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need    coded, don’t hestiate to contact me.</p>
                 <a class="access_button" href="#">Get My Resume</a>
                 <ul class="details">
                     <li><ul class="abilities">
-                        <li class="abilities_title">
+                        <li class="abilities_title one">
                             <img src="images/rectangle.svg" alt="Icon taken from figma">
                             <h3>Language</h3>
                         </li>
@@ -129,7 +127,7 @@
                         <li>Css</li>
                     </ul></li>
                     <li><ul class="abilities">
-                        <li class="abilities_title">
+                        <li class="abilities_title two">
                             <img src="images/square.svg" alt="Icon taken from figma">
                             <h3>Frameworks</h3>
                         </li>
@@ -140,7 +138,7 @@
                         <li>Selenium</li>
                     </ul></li>
                     <li><ul class="abilities">
-                        <li class="abilities_title">
+                        <li class="abilities_title three">
                             <img src="images/circle.svg" alt="Icon taken from figma">
                             <h3>Skills</h3>
                         </li>
@@ -150,9 +148,7 @@
                         <li>Gitlab</li>
                         <li>Terminal</li>
                     </ul></li>
-                </ul>
-            </div>
-            <img class="image_background" src="images/imgback.png" alt="Image background taken from figma">
+                </ul>    
         </section>    
     </div>
 </body>
