Add a form to the code using flex to acomodate the items by  following the template specifications

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <nav class="top">
                 <div>Oscar</div>
-                <img src="images/bar.svg" alt="menu bar Icon taken from the figma template">
+                <a href="#"><img src="images/bar.svg" alt="menu bar Icon taken from the figma template"></a>
             </nav>
         </header>
         <div class="headline">
@@ -149,7 +149,25 @@
                         <li>Terminal</li>
                     </ul></li>
                 </ul>    
-        </section>    
+        </section> 
+        <section class="form">
+            <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+            <form action="https://formspree.io/f/{form_id}" method="post">
+                <input type="text" maxlength="30" required="" placeholder="Full name">
+                <input type="email" required="" placeholder="Email address">
+                <textarea maxlength="500" required="" placeholder="Enter text here"></textarea>
+                <input type="submit" value="Get in touch" class="submit">
+            </form>
+            <div class="bottom">
+                <ul class="media">
+                    <li><a href="#"><img src="images/darkgithub.svg" alt="github icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkin.svg" alt="icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkok.svg" alt="icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darktwitter.svg" alt="icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkm.svg" alt="icon taken from figma"></a></li>
+                </ul>
+            </div>
+        </section>   
     </div>
 </body>
 </html>
