--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
         </section> 
         <section class="form">
             <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
-            <form action="https://formspree.io/f/{form_id}" method="post">
-                <input type="text" maxlength="30" required="" placeholder="Full name">
-                <input type="email" required="" placeholder="Email address">
-                <textarea maxlength="500" required="" placeholder="Enter text here"></textarea>
+            <form action="https://formspree.io/f/xgedkodo" method="post">
+                <input type="text" maxlength="30" required="" placeholder="Full name" name="name">
+                <input type="email" required="" placeholder="Email address" name="email">
+                <textarea maxlength="500" required="" placeholder="Enter text here" name="textarea"></textarea>
                 <input type="submit" value="Get in touch" class="submit">
             </form>
             <div class="bottom">
