Change the tag from the last seccion in HTML

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <input type="submit" value="Get in touch" class="submit">                
             </form>
         </section>
-        <section class="footer">
+        <footer>
             <div class="bottom">
                 <ul class="media">
                     <li><a href="#"><img src="images/darkgithub.svg" alt="github icon taken from figma"></a></li>
@@ -194,7 +194,7 @@
                     <li><a href="#"><img src="images/darkm.svg" alt="icon taken from figma"></a></li>
                 </ul>
             </div>
-        </section>   
+        </footer>   
     </div>
 </body>
 </html>
