add rotate to the front icons animation

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 don’t hestiate to contact me.</p>
             </div>
             <ul class="media front">
-                <li><a href="#"><img class="github" src="images/github.svg" alt="github icon taken from figma"></a></li>
-                <li><a href="#"><img class="in" src="images/in.svg" alt="icon taken from figma"></a></li>
-                <li><a href="#"><img class="ok" src="images/ok.svg" alt="icon taken from figma"></a></li>
-                <li><a href="#"><img class="twitter" src="images/twitter.svg" alt="icon taken from figma"></a></li>
-                <li><a href="#"><img class="m" src="images/m.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/github.svg" alt="github icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/in.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/ok.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/twitter.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/m.svg" alt="icon taken from figma"></a></li>
             </ul>
         </div>
     </div>
