--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#"><img src="images/Union.svg" alt="Envelope icon takem from Figma"></a></li>
+                    <li><a href="#"><img src="images/Union.svg" alt="Envelope icon taken from Figma"></a></li>
                 </ul>
             </nav>
         </header>
