--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </div>
             <ul class="media front">
                 <li><a href="#"><img src="images/github.svg" alt="github icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/in.svg" alt="icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/ok.svg" alt="icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/twitter.svg" alt="icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/m.svg" alt="icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/in.svg" alt="in icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/ok.svg" alt="ok icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/twitter.svg" alt="twitter icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/m.svg" alt="m icon taken from figma"></a></li>
             </ul>
         </div>
     </div>
@@ -136,7 +136,7 @@
                 <ul class="details">
                     <li><ul class="abilities">
                         <li class="abilities_title one">
-                            <img src="images/rectangle.svg" alt="Icon taken from figma">
+                            <img src="images/rectangle.svg" alt="Rhombus icon taken from figma">
                             <h3>Language</h3>
                         </li>
                         <li>Javascript</li>
@@ -146,7 +146,7 @@
                     </ul></li>
                     <li><ul class="abilities">
                         <li class="abilities_title two">
-                            <img src="images/square.svg" alt="Icon taken from figma">
+                            <img src="images/square.svg" alt="Square icon taken from figma">
                             <h3>Frameworks</h3>
                         </li>
                         <li>Bootstrap</li>
@@ -157,7 +157,7 @@
                     </ul></li>
                     <li><ul class="abilities">
                         <li class="abilities_title three">
-                            <img src="images/circle.svg" alt="Icon taken from figma">
+                            <img src="images/circle.svg" alt="Circle icon taken from figma">
                             <h3>Skills</h3>
                         </li>
                         <li>Codekit</li>
@@ -171,27 +171,34 @@
         <section class="form">
             <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
             <form class="mobile-form" action="https://formspree.io/f/xgedkodo" method="post">
-                <input type="text" maxlength="30" required="" placeholder="Full name" name="name">
-                <input type="email" required="" placeholder="Email address" name="email">
-                <textarea maxlength="500" required="" placeholder="Enter text here" name="textarea"></textarea>
+                <label for="name">Name</label>
+                <input type="text" maxlength="30" required="" placeholder="Full name" name="name" id="name">
+                <label for="email-address">Email</label>
+                <input type="email" required="" placeholder="Email address" name="email" id="email-address">
+                <label for="text">Text</label>
+                <textarea maxlength="500" required="" placeholder="Enter text here" name="textarea" id="text"></textarea>
                 <input type="submit" value="Get in touch" class="submit">
             </form>
             <form class="desktop-form" action="https://formspree.io/f/xgedkodo" method="post">
-                <input type="text" maxlength="30" required="" placeholder="First Name" name="fname" class="first-name">
-                <input type="text" maxlength="30" required="" placeholder="Last Name" name="lname" class="last-name">
-                <input type="email" required="" placeholder="Email address" name="email" class="email">
-                <textarea maxlength="500" required="" placeholder="Enter text here" name="textarea"></textarea>
+                <label for="fname">Name</label>
+                <input type="text" maxlength="30" required="" placeholder="First Name" name="fname" class="first-name" id="fname">
+                <label for="lname">Last name</label>
+                <input type="text" maxlength="30" required="" placeholder="Last Name" name="lname" class="last-name" id="lname">
+                <label for="email">Email</label>
+                <input type="email" required="" placeholder="Email address" name="email" class="email" id="email">
+                <label for="textarea">Text</label>
+                <textarea maxlength="500" required="" placeholder="Enter text here" name="textarea" id="textarea"></textarea>
                 <input type="submit" value="Get in touch" class="submit">                
             </form>
         </section>
         <footer>
             <div class="bottom">
                 <ul class="media">
-                    <li><a href="#"><img src="images/darkgithub.svg" alt="github icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darkin.svg" alt="icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darkok.svg" alt="icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darktwitter.svg" alt="icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darkm.svg" alt="icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkgithub.svg" alt="dark github icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkin.svg" alt="dark in icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkok.svg" alt="dark ok icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darktwitter.svg" alt="dark twitter icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkm.svg" alt="dark m icon taken from figma"></a></li>
                 </ul>
             </div>
         </footer>   
