Update alt attribute in the HTML file: lines 1987-201 and 39-42 by removing the image source. Update lines 157-160 images decoration and leave alt as null. Chance CSS file. Update hover in class access_button and class submit to have a dark font and make it accessible.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 don’t hestiate to contact me.</p>
             </div>
             <ul class="media front">
-                <li><a href="#"><img src="images/github.svg" alt="github icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/in.svg" alt="in icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/ok.svg" alt="ok icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/twitter.svg" alt="twitter icon taken from figma"></a></li>
-                <li><a href="#"><img src="images/m.svg" alt="m icon taken from figma"></a></li>
+                <li><a href="#"><img src="images/github.svg" alt="github icon"></a></li>
+                <li><a href="#"><img src="images/in.svg" alt="in icon"></a></li>
+                <li><a href="#"><img src="images/ok.svg" alt="ok icon"></a></li>
+                <li><a href="#"><img src="images/twitter.svg" alt="twitter icon"></a></li>
+                <li><a href="#"><img src="images/m.svg" alt="m icon"></a></li>
             </ul>
         </div>
     </div>
@@ -136,7 +136,7 @@
                 <ul class="details">
                     <li><ul class="abilities">
                         <li class="abilities_title one">
-                            <img src="images/rectangle.svg" alt="Rhombus icon taken from figma">
+                            <img src="images/rectangle.svg" alt="">
                             <h3>Language</h3>
                         </li>
                         <li>Javascript</li>
@@ -146,7 +146,7 @@
                     </ul></li>
                     <li><ul class="abilities">
                         <li class="abilities_title two">
-                            <img src="images/square.svg" alt="Square icon taken from figma">
+                            <img src="images/square.svg" alt="">
                             <h3>Frameworks</h3>
                         </li>
                         <li>Bootstrap</li>
@@ -157,7 +157,7 @@
                     </ul></li>
                     <li><ul class="abilities">
                         <li class="abilities_title three">
-                            <img src="images/circle.svg" alt="Circle icon taken from figma">
+                            <img src="images/circle.svg" alt="">
                             <h3>Skills</h3>
                         </li>
                         <li>Codekit</li>
@@ -194,11 +194,11 @@
         <footer>
             <div class="bottom">
                 <ul class="media">
-                    <li><a href="#"><img src="images/darkgithub.svg" alt="dark github icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darkin.svg" alt="dark in icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darkok.svg" alt="dark ok icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darktwitter.svg" alt="dark twitter icon taken from figma"></a></li>
-                    <li><a href="#"><img src="images/darkm.svg" alt="dark m icon taken from figma"></a></li>
+                    <li><a href="#"><img src="images/darkgithub.svg" alt="github icon"></a></li>
+                    <li><a href="#"><img src="images/darkin.svg" alt="in icon"></a></li>
+                    <li><a href="#"><img src="images/darkok.svg" alt="ok icon"></a></li>
+                    <li><a href="#"><img src="images/darktwitter.svg" alt="twitter icon"></a></li>
+                    <li><a href="#"><img src="images/darkm.svg" alt="m icon"></a></li>
                 </ul>
             </div>
         </footer>   
