--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                     <li><a href="#">Contact</a></li>
                     <li><a href="#"><img src="images/Union.svg" alt="Envelope icon taken from Figma"></a></li>
                 </ul>
+                 <ul class="burger_menu">
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </nav>
         </header>
         <div class="headline">
