--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <li><a href="#">bootstrap</a>
                             <li><a href="#">Ruby</a>
                         </ul>
-                        <a class="access_button" href="#">See Project</a>
+                        <a class="access_button" id="access_popup" href="#">See Project</a>
                     </div>
                 </div>
             </div>
