--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#about_me">About</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#"><img src="images/Union.svg" alt="Envelope icon taken from Figma"></a></li>
+                    <li><a href="#"><img class="envelope" src="images/Union.svg" alt="Envelope icon taken from Figma"></a></li>
                 </ul>
-                 <ul class="burger_menu">
+                <ul class="burger_menu">
                     <li class="close_button"><a href="#"><img src="images/close.svg" alt="close icon"></a></li>
                     <li><a href="#portfolio" class="close_port">Portfolio</a></li>
                     <li><a href="#about_me" class="close_about">About</a></li>
@@ -138,7 +138,7 @@
         <section id="about_me" class="about">
                 <h2 class="title">About me</h2>
                 <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need    coded, don’t hestiate to contact me.</p>
-                <a class="access_button" href="#">Get My Resume</a>
+                <a class="resume" href="#">Get My Resume</a>
                 <ul class="details">
                     <li><ul class="abilities">
                         <li class="abilities_title one">
