update popups with some projects

--- a/index.html
+++ b/index.html
@@ -66,41 +66,41 @@
                             <li><a href="#">bootstrap</a>
                             <li><a href="#">Ruby</a>
                         </ul>
-                        <a class="access_button" href="#">See Project</a>
+                        <a class="access_button 0" href="#">See Project</a>
                     </div>
                 </div>
             </div>
             <div class="second_card first">
-                <h3>Profesional Art Printing Data</h3>
-                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <h3>Moon's Fall-Rock Festival</h3>
+                <p>Responsive site from mobile to desktop. The concept is to promote a rock festival.</p>
                 <ul class="languages">
                     <li><a href="#">html</a>
-                    <li><a href="#">bootstrap</a>
-                    <li><a href="#">Ruby</a>
+                    <li><a href="#">CSS</a>
+                    <li><a href="#">JavaScript</a>
                 </ul>
-                <a class="access_button" href="#">See Project</a>
+                <a class="access_button 1" href="#">See Project</a>
             </div>
             <div class="second_card second">
-                <h3>Profesional Art Printing Data</h3>
-                <h4>Data Dashboard Healthcare</h4>
-                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <h3>To Do List</h3>
+                <h4>To Do List Application</h4>
+                <p>App that keeps records of some activities. Allow to edit, delete and check activities as completed.</p>
                 <ul class="languages">
-                    <li><a href="#">html</a>
-                    <li><a href="#">bootstrap</a>
-                    <li><a href="#">Ruby</a>
+                    <li><a href="#">CSS</a>
+                    <li><a href="#">JavaScript</a>
+                    <li><a href="#">Webpack</a>
                 </ul>
-                <a class="access_button" href="#">See Project</a>
+                <a class="access_button 2" href="#">See Project</a>
             </div>
             <div class="second_card third">
-                <h3>Profesional Art Printing Data</h3>
-                <h4>Website Protfolio</h4>
-                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <h3>Awesome Books</h3>
+                <h4>Awesome Books </h4>
+                <p>A basic app that saves information of books added by title and author. Allows to delete books from the list.</p>
                 <ul class="languages">
                     <li><a href="#">html</a>
                     <li><a href="#">bootstrap</a>
                     <li><a href="#">Ruby</a>
                 </ul>
-                <a class="access_button" href="#">See Project</a>
+                <a class="access_button 3" href="#">See Project</a>
             </div>
             <div class="second_card fourth">
                 <h3>Profesional Art Printing Data</h3>
@@ -110,7 +110,7 @@
                     <li><a href="#">bootstrap</a>
                     <li><a href="#">Ruby</a>
                 </ul>
-                <a class="access_button" href="#">See Project</a>
+                <a class="access_button 4" href="#">See Project</a>
             </div>
             <div class="second_card fifth">
                 <h3>Profesional Art Printing Data</h3>
@@ -121,7 +121,7 @@
                     <li><a href="#">bootstrap</a>
                     <li><a href="#">Ruby</a>
                 </ul>
-                <a class="access_button" href="#">See Project</a>
+                <a class="access_button 5" href="#">See Project</a>
             </div>
             <div class="second_card sixth">
                 <h3>Profesional Art Printing Data</h3>
@@ -132,7 +132,7 @@
                     <li><a href="#">bootstrap</a>
                     <li><a href="#">Ruby</a>
                 </ul>
-                <a class="access_button" href="#">See Project</a>
+                <a class="access_button 6" href="#">See Project</a>
             </div>
         </section>
         <section id="about_me" class="about">
@@ -186,19 +186,6 @@
                 <small id="smText"></small>
                 <input type="submit" value="Get in touch" class="submit">
             </form>
-            <form class="desktop-form" id="desktop-form" action="https://formspree.io/f/xgedkodo" method="post">
-                <label for="fname">Name</label>
-                <input type="text" maxlength="30" required="" placeholder="First Name" name="fname" class="first-name" id="fname">
-                <label for="lname">Last name</label>
-                <input type="text" maxlength="30" required="" placeholder="Last Name" name="lname" class="last-name" id="lname">
-                <label for="email">Email</label>
-                <input type="email" required="" placeholder="Email address" name="email" class="email" id="email">
-                <small class="smText"></small>
-                <label for="textarea">Text</label>
-                <textarea maxlength="500" required="" placeholder="Enter text here" name="textarea" id="textarea"></textarea>
-                <small id="smText-desktop"></small>
-                <input type="submit" value="Get in touch" class="submit">
-            </form>
         </section>
         <footer>
             <div class="bottom">
@@ -212,6 +199,6 @@
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
